fix keyboard issue on ios

--- a/src/sass/_search.scss
+++ b/src/sass/_search.scss
@@ -63,7 +63,12 @@
   cursor: pointer;
 }
 
-.search:focus-within {
+body:focus-within {
+  body {
+    position: fixed;
+    overscroll-behavior: contain;
+  }
+
   .search__icon {
     position: static;
     opacity: 1;
